{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 5,
  "lineage": "f1d65404-26bf-baec-62ca-ff82033d2340",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d7ad69e61ade457",
            "arn": "arn:aws:ec2:us-east-1:227029466918:elastic-ip/eipalloc-01d7ad69e61ade457",
            "domain": "vpc",
            "id": "eipalloc-01d7ad69e61ade457",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-80-255-195.compute-1.amazonaws.com",
            "public_ip": "54.80.255.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227029466918:security-group/sg-0af8d929ff1a7c1a5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0af8d929ff1a7c1a5",
            "ingress": [],
            "name": "attribute-sg",
            "name_prefix": "",
            "owner_id": "227029466918",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058b3d61cff17bf77"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227029466918:security-group-rule/sgr-0a6bd7427a0719501",
            "cidr_ipv4": "54.80.255.195/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a6bd7427a0719501",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0af8d929ff1a7c1a5",
            "security_group_rule_id": "sgr-0a6bd7427a0719501",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my-lb",
            "aws_security_group.example"
          ]
        }
      ]
    }
  ]
}